--- a/MLP Classifier/Description
+++ b/MLP Classifier/Description
@@ -1,3 +1,11 @@
 Using MLP(Multi-Layer Perceptron) model, We are supposed to train the MNIST digit dataset to recognize the handwritten digits. Refer to MNIST digit dataset to know more details about the dataset. 
 This is experimented by changing hyperparameters like number hidden layers, number of neurons in each of the hidden layers to get better proformance. 
 I got a score of 99.4% on the unseen data.
+
+Dataset Description:
+The data files train.csv and test.csv contain gray-scale images of hand-drawn digits, from zero through nine.
+Each image is 8 pixels in height and 8 pixels in width, for a total of 64 pixels in total. Each pixel has a single pixel-value associated with it, indicating the lightness or darkness of that pixel, with higher numbers meaning darker. 
+This pixel-value is an integer between 0 and 255, inclusive. Each row represents an image of a digit.
+The training data set, (train.csv), has 66 columns. The first column is the ID and the last column is the ground truth or target i.e the actual digit shown in the image. 
+The rest of the columns contain the pixel-values of the associated image.
+test.csv has 65 columns. First column is the ID and remaining columns are the pixel values of 8 x 8 = 64 pixels.
